force-app/main/default/objects/ReCurly_Transaction__b/ReCurly_Transaction__b.object-meta.xml
<CustomObject>
    <indexes>
        <fullName>Base_Index</fullName>
        <fields>
            <name>Subscription__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>SFID__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Base Index</label>
    </indexes>
    <label>ReCurly_Transaction</label>
    <pluralLabel>ReCurly_Transactions</pluralLabel>
</CustomObject>