force-app/main/default/objects/ReCurly_Transaction__b/fields/Check_Number__c.field-meta.xml
<CustomField>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>