force-app/main/default/objects/ReCurly_Transaction__b/fields/Created_in_Salesforce__c.field-meta.xml
<CustomField>
        <fullName>Created_in_Salesforce__c</fullName>
        <label>Created in Salesforce</label>
        <type>DateTime</type>
    </CustomField>