force-app/main/default/objects/ReCurly_Transaction__b/fields/Debit_Card__c.field-meta.xml
<CustomField>
        <fullName>Debit_Card__c</fullName>
        <label>Debit Card</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>