force-app/main/default/objects/ReCurly_Transaction__b/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </CustomField>