force-app/main/default/objects/ReCurly_Transaction__b/fields/NIE_Code__c.field-meta.xml
<CustomField>
        <fullName>NIE_Code__c</fullName>
        <label>NIE Code</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>