force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Account__c.field-meta.xml
<CustomField>
        <fullName>recurly_Account__c</fullName>
        <label>Account</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>