force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Amount__c.field-meta.xml
<CustomField>
        <fullName>recurly_Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>