force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Billing_City__c.field-meta.xml
<CustomField>
        <fullName>recurly_Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>