force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Collected_At__c.field-meta.xml
<CustomField>
        <fullName>recurly_Collected_At__c</fullName>
        <label>Collected At</label>
        <type>DateTime</type>
    </CustomField>