force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Created_At__c.field-meta.xml
<CustomField>
        <fullName>recurly_Created_At__c</fullName>
        <label>Created In Recurly At</label>
        <type>DateTime</type>
    </CustomField>