force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Expiration_Month__c.field-meta.xml
<CustomField>
        <fullName>recurly_Expiration_Month__c</fullName>
        <label>Expiration Month</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>