force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Payment_Card_Type__c.field-meta.xml
<CustomField>
        <fullName>recurly_Payment_Card_Type__c</fullName>
        <label>Card Type</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>