force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Payment_First_Six__c.field-meta.xml
<CustomField>
        <fullName>recurly_Payment_First_Six__c</fullName>
        <label>First Six</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>