force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Payment_Last_Four__c.field-meta.xml
<CustomField>
        <fullName>recurly_Payment_Last_Four__c</fullName>
        <label>Last Four</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>