force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Status_Message__c.field-meta.xml
<CustomField>
        <fullName>recurly_Status_Message__c</fullName>
        <label>Status Message</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>