force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Subscription_ID__c.field-meta.xml
<CustomField>
        <fullName>recurly_Subscription_ID__c</fullName>
        <label>Subscription ID</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>