force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Success__c.field-meta.xml
<CustomField>
        <fullName>recurly_Success__c</fullName>
        <label>Success</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>