force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Type__c.field-meta.xml
<CustomField>
        <fullName>recurly_Type__c</fullName>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>