force-app/main/default/objects/ReCurly_Transaction__b/fields/recurly_Voided_At__c.field-meta.xml
<CustomField>
        <fullName>recurly_Voided_At__c</fullName>
        <label>Voided At</label>
        <type>DateTime</type>
    </CustomField>