force-app/main/default/objects/ReCurly_Transaction__b/fields/SFID__c.field-meta.xml
<CustomField>
        <fullName>SFID__c</fullName>
        <description>Id of original recurly transaction this record is an archive of.</description>
        <label>SFID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>