force-app/main/default/objects/ReCurly_Transaction__b/fields/Solicitor_Account__c.field-meta.xml
<CustomField>
        <fullName>Solicitor_Account__c</fullName>
        <label>Solicitor Account</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>