force-app/main/default/objects/ReCurly_Transaction__b/fields/Solicitor_Contact__c.field-meta.xml
<CustomField>
        <fullName>Solicitor_Contact__c</fullName>
        <label>Solicitor Contact</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>