force-app/main/default/objects/ReCurly_Transaction__b/fields/Subscription__c.field-meta.xml
<CustomField>
        <fullName>Subscription__c</fullName>
        <description>Is of the Subscription record this transaction is linked to.</description>
        <label>Subscription</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>